# APE_MIPT

./: README.md
advanced_c/coursework/: CMakeLists.txt  algorithm.c  algorithm.h  common.c  common.h  main.c
advanced_c/hw_01/: task_01.c  task_02.c  task_03.c  task_04.c  task_05.c
advanced_c/hw_02/: task_01.c  task_02.c
advanced_c/hw_03/: task_01.c  task_02.c  task_03.c
advanced_c/hw_04/: task_01.c  task_02.c  task_03.c
advanced_c/snake_game/: CMakeLists.txt  logic.c  logic.h  main.c  properties.h
primer_c/coursework/: CMakeLists.txt  Doxyfile  Makefile  sensalyzer.c
primer_c/coursework/apps/: CMakeLists.txt  sensalyzer.c
primer_c/coursework/common/: CMakeLists.txt  timestamp.c  timestamp.h  vector.c  vector.h
primer_c/coursework/data/: debugging_data.csv
primer_c/coursework/docs/doxygen/: main.markdown  main.md  modules.dox
primer_c/coursework/sensors/: CMakeLists.txt  temperature.c  temperature.h
primer_c/coursework/tools/: CMakeLists.txt  cmd_handler.c  cmd_handler.h  cmd_interface.c
primer_c/hw_01/: task_02.c  task_03.c  task_1.c  task_2.c  task_3.c
primer_c/hw_03/: task_01.c  task_02.c  task_03.c  task_04.c  task_05.c  task_1.c  task_2.c  task_3.c  task_5.c
primer_c/hw_04/: task_01.c  task_02.c  task_03.c  task_04.c  task_05.c  task_06.c  task_07.c  task_08.c  task_09.c  task_10.c  task_11.c  task_12.c  task_3.c  task_4.c  task_6.c  task_9.c
primer_c/hw_05/: task_01.c  task_02.c  task_03.c  task_04.c  task_05.c  task_06.c  task_07.c  task_08.c  task_09.c  task_10.c  task_11.c  task_12.c  task_13.c  task_14.c  task_15.c  task_16.c  (+5 more)
(+27 files in other folders)
